[package]
name = "lclPy"
version = "0.1.0"
edition = "2021"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lclRust"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
pyo3 = { version = "0.21.2",features = ["extension-module"] }
rand = { version = "0.8.5", features = ["small_rng"] }
